--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI = 'mongodb+srv://admin:adminAsDf@govt-streamlinerdb.t9ws7.mongodb.net/?retryWrites=true&w=majority&appName=Govt-StreamLinerDB'
+MONGO_URI = "<Your MongoDB URI goes here>"
