--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.2",
     "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.1",
+    "openai": "^4.77.0",
     "tesseract.js": "^5.1.1"
   },
   "devDependencies": {
